--- a/circle.yml
+++ b/circle.yml
@@ -2,9 +2,15 @@ machine:
   ruby:
     version: 2.3.1
 
-test:
+dependencies:
   pre:
+    - gem install bundler
+
+database:
+  override:
     - bundle exec rake test_app
+
+test:
   override:
     - bundle exec rubocop -R
-    - bundle exec rspec
+    - bundle exec rake
